# quantpricer

./: .gitignore  COLD_START_GUIDE.md  DEPLOYMENT.md  README.md  SECURITY.md  pyproject.toml  quantpricer.db  requirements.txt  test_cold_start.py
app/: app.py
backend/: README.md  render.yaml
backend/app/: charts_api.py  deps.py  main.py  schemas.py
backend/src/core/: bs.py  greeks.py  iv.py  normals.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/app/: api-client.ts  globals.css  layout.tsx  page.tsx
frontend/app/components/: Controls.tsx  GreeksTable.tsx  IVCard.tsx  PriceCard.tsx
frontend/app/components/Charts/: GreeksPanel.tsx  Heatmap.tsx  PriceCurve.tsx
frontend/components/: WakeBanner.tsx
frontend/components/ui/: chart.tsx
frontend/hooks/: usePrice.ts
frontend/lib/: api.ts  hash.ts
src/core/: bs.py  greeks.py  iv.py  normals.py
src/utils/: logging.py  plots.py
tests/: test_bs.py  test_greeks.py  test_iv.py  test_normals.py
